# MetaTron

./: .gitignore  meta.txt  outputX  pyproject.toml
.claude/: settings.local.json
output2/: claude.md  genesis.py
output2/outputT/: genesis.py  output-X.txt
output2/outputX/: genesis.py  output-X.txt
src/genesis/: __init__.py  __main__.py
src/genesis/cli/: __init__.py  commands.py
src/genesis/core/: __init__.py  engine.py  quine.py  serializer.py
src/genesis/fonts/: __init__.py  ascii_art.py
src/genesis/templates/: __init__.py  loader.py
src/genesis/voice/: __init__.py  gandalf.py
templates/: base_prompt.j2  genesis_prompt.j2  quine_prompt.j2
